enabled I2S2 DMA interrupt

--- a/Project/iVIS_STM_CUBE_IDE/.cproject
+++ b/Project/iVIS_STM_CUBE_IDE/.cproject
@@ -110,11 +110,13 @@
 						</toolChain>
 					</folderInfo>
 					<sourceEntries>
-						<entry excluding="AppIVIS/src/freertos.c|AppIVIS/Startup|AppIVIS/src/main2.c|Startup|src/freertos.c|src/main2.c" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="AppIVIS"/>
-						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="AppIVIS/AppIVIS/Startup"/>
-						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="Drivers"/>
-						<entry excluding="ST|CycloneTcp/cyclone_tcp/drivers/eth/enc624j600_driver.c|CycloneTcp/cyclone_tcp/drivers/eth/ksz8851_driver.c|CycloneTcp/cyclone_tcp/drivers/eth/dm9000_driver.c|CycloneTcp/cyclone_tcp/drivers/wifi|CycloneTcp/cyclone_tcp/drivers/usb_rndis|CycloneTcp/cyclone_tcp/drivers/switch|CycloneTcp/cyclone_tcp/drivers/phy|CycloneTcp/cyclone_tcp/drivers/pcap|CycloneTcp/cyclone_tcp/drivers/mac|CycloneTcp/cyclone_tcp/drivers/loopback|CycloneTcp/cyclone_tcp/http|CycloneTcp/common/exlude|CycloneTcp/cyclone_tcp/tftp|CycloneTcp/cyclone_tcp/sntp|CycloneTcp/cyclone_tcp/snmp|CycloneTcp/cyclone_tcp/smtp|CycloneTcp/cyclone_tcp/netbios|CycloneTcp/cyclone_tcp/mqtt_sn|CycloneTcp/cyclone_tcp/mqtt|CycloneTcp/cyclone_tcp/modbus|CycloneTcp/cyclone_tcp/mibs|CycloneTcp/cyclone_tcp/ipv6|CycloneTcp/cyclone_tcp/igmp|CycloneTcp/cyclone_tcp/icecast|CycloneTcp/cyclone_tcp/ftp|CycloneTcp/cyclone_tcp/dhcpv6|CycloneTcp/cyclone_tcp/coap|CycloneTcp/cyclone_tcp/web_socket" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="Middleware"/>
 						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="Startup"/>
+						<entry excluding="ST|CycloneTcp/cyclone_tcp/drivers/eth/enc624j600_driver.c|CycloneTcp/cyclone_tcp/drivers/eth/ksz8851_driver.c|CycloneTcp/cyclone_tcp/drivers/eth/dm9000_driver.c|CycloneTcp/cyclone_tcp/drivers/wifi|CycloneTcp/cyclone_tcp/drivers/usb_rndis|CycloneTcp/cyclone_tcp/drivers/switch|CycloneTcp/cyclone_tcp/drivers/phy|CycloneTcp/cyclone_tcp/drivers/pcap|CycloneTcp/cyclone_tcp/drivers/mac|CycloneTcp/cyclone_tcp/drivers/loopback|CycloneTcp/cyclone_tcp/http|CycloneTcp/common/exlude|CycloneTcp/cyclone_tcp/tftp|CycloneTcp/cyclone_tcp/sntp|CycloneTcp/cyclone_tcp/snmp|CycloneTcp/cyclone_tcp/smtp|CycloneTcp/cyclone_tcp/netbios|CycloneTcp/cyclone_tcp/mqtt_sn|CycloneTcp/cyclone_tcp/mqtt|CycloneTcp/cyclone_tcp/modbus|CycloneTcp/cyclone_tcp/mibs|CycloneTcp/cyclone_tcp/ipv6|CycloneTcp/cyclone_tcp/igmp|CycloneTcp/cyclone_tcp/icecast|CycloneTcp/cyclone_tcp/ftp|CycloneTcp/cyclone_tcp/dhcpv6|CycloneTcp/cyclone_tcp/coap|CycloneTcp/cyclone_tcp/web_socket" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="Middleware"/>
+						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="AppIVIS/AppIVIS/Startup"/>
+						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="Core"/>
+						<entry excluding="AppIVIS/src/freertos.c|AppIVIS/Startup|AppIVIS/src/main2.c|Startup|src/freertos.c|src/main2.c" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="AppIVIS"/>
+						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="Middlewares"/>
+						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="Drivers"/>
 					</sourceEntries>
 				</configuration>
 			</storageModule>
@@ -205,11 +207,13 @@
 						</toolChain>
 					</folderInfo>
 					<sourceEntries>
-						<entry excluding="AppIVIS/src/freertos.c|AppIVIS/Startup|AppIVIS/src/main2.c|Startup|src/freertos.c|src/main2.c" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="AppIVIS"/>
-						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="AppIVIS/AppIVIS/Startup"/>
-						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="Drivers"/>
-						<entry excluding="ST|CycloneTcp/cyclone_tcp/drivers/eth/enc624j600_driver.c|CycloneTcp/cyclone_tcp/drivers/eth/ksz8851_driver.c|CycloneTcp/cyclone_tcp/drivers/eth/dm9000_driver.c|CycloneTcp/cyclone_tcp/drivers/wifi|CycloneTcp/cyclone_tcp/drivers/usb_rndis|CycloneTcp/cyclone_tcp/drivers/switch|CycloneTcp/cyclone_tcp/drivers/phy|CycloneTcp/cyclone_tcp/drivers/pcap|CycloneTcp/cyclone_tcp/drivers/mac|CycloneTcp/cyclone_tcp/drivers/loopback|CycloneTcp/cyclone_tcp/http|CycloneTcp/common/exlude|CycloneTcp/cyclone_tcp/tftp|CycloneTcp/cyclone_tcp/sntp|CycloneTcp/cyclone_tcp/snmp|CycloneTcp/cyclone_tcp/smtp|CycloneTcp/cyclone_tcp/netbios|CycloneTcp/cyclone_tcp/mqtt_sn|CycloneTcp/cyclone_tcp/mqtt|CycloneTcp/cyclone_tcp/modbus|CycloneTcp/cyclone_tcp/mibs|CycloneTcp/cyclone_tcp/ipv6|CycloneTcp/cyclone_tcp/igmp|CycloneTcp/cyclone_tcp/icecast|CycloneTcp/cyclone_tcp/ftp|CycloneTcp/cyclone_tcp/dhcpv6|CycloneTcp/cyclone_tcp/coap|CycloneTcp/cyclone_tcp/web_socket" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="Middleware"/>
 						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="Startup"/>
+						<entry excluding="ST|CycloneTcp/cyclone_tcp/drivers/eth/enc624j600_driver.c|CycloneTcp/cyclone_tcp/drivers/eth/ksz8851_driver.c|CycloneTcp/cyclone_tcp/drivers/eth/dm9000_driver.c|CycloneTcp/cyclone_tcp/drivers/wifi|CycloneTcp/cyclone_tcp/drivers/usb_rndis|CycloneTcp/cyclone_tcp/drivers/switch|CycloneTcp/cyclone_tcp/drivers/phy|CycloneTcp/cyclone_tcp/drivers/pcap|CycloneTcp/cyclone_tcp/drivers/mac|CycloneTcp/cyclone_tcp/drivers/loopback|CycloneTcp/cyclone_tcp/http|CycloneTcp/common/exlude|CycloneTcp/cyclone_tcp/tftp|CycloneTcp/cyclone_tcp/sntp|CycloneTcp/cyclone_tcp/snmp|CycloneTcp/cyclone_tcp/smtp|CycloneTcp/cyclone_tcp/netbios|CycloneTcp/cyclone_tcp/mqtt_sn|CycloneTcp/cyclone_tcp/mqtt|CycloneTcp/cyclone_tcp/modbus|CycloneTcp/cyclone_tcp/mibs|CycloneTcp/cyclone_tcp/ipv6|CycloneTcp/cyclone_tcp/igmp|CycloneTcp/cyclone_tcp/icecast|CycloneTcp/cyclone_tcp/ftp|CycloneTcp/cyclone_tcp/dhcpv6|CycloneTcp/cyclone_tcp/coap|CycloneTcp/cyclone_tcp/web_socket" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="Middleware"/>
+						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="AppIVIS/AppIVIS/Startup"/>
+						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="Core"/>
+						<entry excluding="AppIVIS/src/freertos.c|AppIVIS/Startup|AppIVIS/src/main2.c|Startup|src/freertos.c|src/main2.c" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="AppIVIS"/>
+						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="Middlewares"/>
+						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="Drivers"/>
 					</sourceEntries>
 				</configuration>
 			</storageModule>
